@@ -6,6 +6,7 @@ plan tests => 9;
 use DateTime;
 use DateTime::Duration;
 use DateTime::Set;
+use warnings;
 
 #======================================================================
 # recurrence
@@ -43,7 +44,7 @@ is( $res, INFINITY,
     "max()" );
 
 # "END"
-my $months = DateTime::Set->from_recurrence(
+$months = DateTime::Set->from_recurrence(
     recurrence => $month_callback,
     end => $t1,
 );
@@ -57,7 +58,7 @@ is( $res, '1810-09-01',
     "max()" );
 
 # "START+END"
-my $months = DateTime::Set->from_recurrence(
+$months = DateTime::Set->from_recurrence(
     recurrence => $month_callback,
     start => $t1,
     end => $t2,
@@ -75,7 +76,7 @@ is( $res, '1810-12-01',
 # "START+END" at recurrence 
 $t1->set( day => 1 );  # month=8
 $t2->set( day => 1 );  # month=11
-my $months = DateTime::Set->from_recurrence(
+$months = DateTime::Set->from_recurrence(
     recurrence => $month_callback,
     start => $t1,
     end => $t2,
