@@ -6,6 +6,7 @@ plan tests => 4;
 use DateTime;
 use DateTime::Duration;
 use DateTime::Set;
+use warnings;
 
 #======================================================================
 # recurrence intersection
@@ -76,8 +77,8 @@ ok( $res eq '1811-04-15',
     "min() - got $res" );
 
 
-my $iterator = $m12->iterator;
-my @res;
+$iterator = $m12->iterator;
+@res = ();
 for (1..3) {
         my $tmp = $iterator->next;
         push @res, $tmp->ymd if defined $tmp;
